samples/_failures_safe/1761476711_f75d80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1016ef14.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_1016ef14.c:129:13: error: expected expression at end of input
  129 |             for (int j = 0; j < n; j++)
      |             ^~~
./samples/SAFE/__tmp_1016ef14.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1016ef14.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1016ef14.c:129:13: error: expected declaration or statement at end of input
